# FCG

./: CMakeLists.txt  math.cpp
src/: CMakeLists.txt  list.h  math.cpp  math.h  output.h  renderer.cpp
